<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheChoice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_coin">CoinActivity</string>
    <string name="title_activity_consumer_profile">ConsumerProfile</string>
    <string name="title_activity_seller_profile">SellerProfileActivity</string>
    <string name="write_content_activity_menu_category">카테고리</string>
    <string name="write_content_activity_menu_count">인원</string>
    <string name="write_content_activity_menu_budget">예산</string>
    <string name="write_content_activity_menu_location">지역</string>
    <string name="write_content_activity_submenu_current_position">현재위치</string>
    <string name="write_content_activity_submenu_nearest_subway">가까운 지하철 역</string>
    <string name="write_content_activity_menu_title">제목</string>
    <string name="write_content_activity_menu_details">상세정보</string>
    <string name="write_content_activity_menu_photo_upload">사진 업로드</string>
    <string name="title_activity_article_list">ArticleListActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_post_script">PostScriptActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_review">ReviewActivity</string>

</resources>
